--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -9,7 +9,7 @@
     font-family: "Montserrat",sans-serif;
     font-size: 5vw;
     padding-bottom: 15px;
-    box-shadow: 0px 1px 5px #aad3f7;
+    box-shadow: 0px 2px 6px #bfd9f0;
     color: white;
     z-index: 100;
 }
