--- a/src/Components/SingleContent/SingleContent.css
+++ b/src/Components/SingleContent/SingleContent.css
@@ -4,7 +4,7 @@
     width: 200px;
     padding: 5px;
     margin: 5px 0;
-    background-color: #0c375c;
+    background-color: #20486b;
     border-radius: 10px;
     position: relative;
     font-family: "Montserrat", sans-serif;
