--- a/src/Components/ContentModal/ContentModal.css
+++ b/src/Components/ContentModal/ContentModal.css
@@ -14,6 +14,7 @@
 .tagline {
   padding-bottom: 10px;
   align-self: center;
+  color: white;
 }
 
 .ContentModal {
@@ -47,6 +48,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: white;
+  font-weight: bold;
 }
 
 .ContentModal__description {
@@ -56,8 +59,9 @@
   padding: 15px;
   border-radius: 20px;
   scrollbar-width: thin; /* Firefox */
-  box-shadow: inset 0 0 5px #000000;
+  box-shadow: inset 0 0 5px #061b3b;
   text-align: justify;
+  color: rgb(253, 251, 135);
 }
 
 .ContentModal__description::-webkit-scrollbar {
@@ -68,6 +72,11 @@
   .ContentModal__landscape {
     display: none;
   }
+
+  .tagline {
+    padding: 5px 0px;
+  }
+
   .ContentModal__portrait {
     display: flex;
     width: 38%;
@@ -83,7 +92,7 @@
     height: 100%;
   }
   .ContentModal__title {
-    font-size: 3.5vw;
+    font-size: 3vw;
   }
   .ContentModal__description {
     font-size: 22px;
